@@ -1,3 +1,8 @@
+2011-01-15 S. Thiell <stephane.thiell@cea.fr>
+
+	* NodeSet.py: Add docstring for NodeSet string arithmetics (, ! & ^),
+	which is also called extended string pattern (trac ticket #127).
+
 2010-12-14 S. Thiell <stephane.thiell@cea.fr>
 
 	* Version 1.4 beta 1 released.
